--- a/TeamWorkWebApp/Views/Account/SignUp.cshtml
+++ b/TeamWorkWebApp/Views/Account/SignUp.cshtml
@@ -49,7 +49,7 @@
         </div>
 
         <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
-        <p class="text-center">Already have an account? <a asp-controller="Account" asp-action="Login">Login</a>!</p>
+        <p class="text-center">Already have an account? <a asp-controller="Account" asp-action="SignIn">SignIn</a>!</p>
     </form>
     @if (ViewBag.Message != null)
     {
