--- a/TeamWorkWebApp/Views/Shared/_Layout.cshtml
+++ b/TeamWorkWebApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                         </li>
                     </ul>
                 </div>
+                @* <div style="margin: 0 20px; color:white;" runat="server" id="Greeting"></div>
+                <a href="?entrance=1" runat="server" visible="true" id="aEntrance">Войти</a> *@
             </div>
         </nav>
     </header>
