--- a/TeamWorkWebApp/Views/Account/SignUp.cshtml
+++ b/TeamWorkWebApp/Views/Account/SignUp.cshtml
@@ -47,6 +47,11 @@
             <label asp-for="Password">Password</label>
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
+        <div class="form-floating">
+            <input asp-for="PasswordConfirmation" class="form-control" placeholder="PasswordConfirmation" />
+            <label asp-for="PasswordConfirmation">Confirm your password</label>
+            <span asp-validation-for="PasswordConfirmation" class="text-danger"></span>
+        </div>
 
         <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
         <p class="text-center">Already have an account? <a asp-controller="Account" asp-action="SignIn">SignIn</a>!</p>
