--- a/TeamWorkWebApp/Views/Account/SignIn.cshtml
+++ b/TeamWorkWebApp/Views/Account/SignIn.cshtml
@@ -1,6 +1,6 @@
 ﻿﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using TeamWorkWebApp.ViewModels
-@model AccountViewModel
+@model SignInViewModel
 @{
 }
 <style>
