--- a/TeamWorkWebApp/Views/Account/SignUp.cshtml
+++ b/TeamWorkWebApp/Views/Account/SignUp.cshtml
@@ -43,12 +43,12 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-floating">
-            <input asp-for="Password" class="form-control" placeholder="Password" />
+            <input asp-for="Password" class="form-control" placeholder="Password" type="password" />
             <label asp-for="Password">Password</label>
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div class="form-floating">
-            <input asp-for="PasswordConfirmation" class="form-control" placeholder="PasswordConfirmation" />
+            <input asp-for="PasswordConfirmation" class="form-control" placeholder="PasswordConfirmation" type="password" />
             <label asp-for="PasswordConfirmation">Confirm your password</label>
             <span asp-validation-for="PasswordConfirmation" class="text-danger"></span>
         </div>
